--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-echo "venv/" >> .gitignore
-echo ".venv/" >> .gitignore
-echo "env/" >> .gitignore
-echo "__pycache__/" >> .gitignore
-echo "*.pyc" >> .gitignore
+venv/
+.venv/
+env/
+__pycache__/
+*.pyc
+data/
+.vscode/
